--- a/index.html
+++ b/index.html
@@ -86,22 +86,20 @@
                     </svg>
                 </button>
             </div>
-
-
-            <!-- Mobile Menu -->
-            <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4 mobile-menu">
-                <ul class="flex flex-col space-y-4">
-                    <li><a href="#home" class="nav-link">Home</a></li>
-                    <li><a href="#announcements" class="nav-link">Announcements</a></li>
-                    <li><a href="#timeline" class="nav-link">Timeline</a></li>
-                    <li><a href="#themes" class="nav-link">Themes</a></li>
-                    <li><a href="#prizes" class="nav-link">Prizes</a></li>
-                    <li><a href="#gallery" class="nav-link">Gallery</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
-                </ul>
-            </div>
         </nav>
 
+        <!-- Mobile Menu - Outside nav-wrapper to prevent layout shift -->
+        <div id="mobile-menu" class="hidden md:hidden mobile-menu">
+            <ul class="flex flex-col space-y-4">
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#announcements" class="nav-link">Announcements</a></li>
+                <li><a href="#timeline" class="nav-link">Timeline</a></li>
+                <li><a href="#themes" class="nav-link">Themes</a></li>
+                <li><a href="#prizes" class="nav-link">Prizes</a></li>
+                <li><a href="#gallery" class="nav-link">Gallery</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
 
     </header>
 
