--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                 </div>
                             </div>
                             <div class="deadline-content">
-                                <span class="deadline-label">Registrations Close</span>
+                                <span class="deadline-label">Registrations Closes</span>
                                 <span class="deadline-date">30th January 2026</span>
                             </div>
                         </div>
@@ -382,7 +382,7 @@
                         <span style="color:var(--green-neon);font-weight:600;">16th Jan, 2026</span>
                         <p class="timeline-description" style="margin-top:0.5rem; font-size:0.9rem;">
                             Early Bird Offer: <span style="color:var(--green-neon); font-weight:700;">₹500</span> <span
-                                style="font-size:0.8rem; opacity:0.8;">(Valid till 26th Jan only)</span>
+                                style="font-size:0.8rem; opacity:0.8;">(Valid till 26th Jan only; ₹600 after)</span>
                         </p>
                     </div>
                     <div class="timeline-dot"></div>
@@ -391,7 +391,7 @@
                 <!-- Timeline Item 2 -->
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3 class="timeline-title glitch-text" data-text="Registration Close">Registration Close</h3>
+                        <h3 class="timeline-title glitch-text" data-text="Registration Closes">Registration Closes</h3>
                         <p class="timeline-description"><span style="color:var(--green-neon);font-weight:600;">30th Jan,
                                 2026</span></p>
                     </div>
