--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
                 </div>
             </div>
 
+            <!-- Partner Logos Mobile - Visible on mobile navbar -->
+            <div class="partner-logos-nav partner-logos-mobile">
+                <div class="nav-partner-item">
+                    <span class="nav-partner-label">Sponsors</span>
+                    <div style="display: flex; gap: 0.5rem; align-items: center;">
+                        <img src="assets/images/logos/sponsorpartner.png" alt="Sponsor" class="nav-partner-logo"
+                            style="background: #ffffff; padding: 0.5rem; border-radius: 12px; opacity: 0.8;">
+                        <img src="assets/images/logos/sponsorpartner2.png" alt="Sponsor 2" class="nav-partner-logo"
+                            style="max-height: 65px; background: #ffffff; padding: 0.5rem; border-radius: 12px; opacity: 0.8;">
+                    </div>
+                </div>
+                <div class="nav-partner-item">
+                    <span class="nav-partner-label">Channel Partner</span>
+                    <img src="assets/images/logos/channelpartner.png" alt="Channel Partner" class="nav-partner-logo"
+                        style="background: #ffffff; padding: 0.5rem; border-radius: 12px; opacity: 0.8;">
+                </div>
+            </div>
+
             <!-- Mobile Menu Button -->
             <div class="mobile-menu-wrapper">
                 <button class="md:hidden mobile-menu-btn" id="mobile-menu-btn">
