--- a/index.html
+++ b/index.html
@@ -424,6 +424,16 @@
                             Result Declaration</h3>
                         <p class="timeline-description"><span style="color:var(--green-neon);font-weight:600;">7th Feb,
                                 2026</span></p>
+                        <a href="HACKMoR 2026- Template_final.pdf" download class="timeline-pdf-link"
+                            style="display: inline-flex; align-items: center; gap: 0.5rem; margin-top: 0.75rem; padding: 0.5rem 1rem; background: rgba(0, 255, 136, 0.1); border: 1px solid rgba(0, 255, 136, 0.3); border-radius: 8px; color: var(--green-neon); font-size: 0.9rem; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                                <polyline points="7 10 12 15 17 10"></polyline>
+                                <line x1="12" y1="15" x2="12" y2="3"></line>
+                            </svg>
+                            Download Presentation Template
+                        </a>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
